--- a/website/blog/2024-02-03-textlint-14.md
+++ b/website/blog/2024-02-03-textlint-14.md
@@ -27,7 +27,7 @@ You need to upgrade Node.js to 18 or 20.
 
 For textlint developer, `textlint-scripts` also requires Node.js v18.19.0+.
 
-### move `gulp-textlint` to out of monorepo
+### Move `gulp-textlint` to out of monorepo
 
 We move `gulp-textlint` to out of monorepo.
 
@@ -50,7 +50,7 @@ We may visit again, but we will delete this experimental flag once.
 - Issue: [Parallel linting · Issue #633 · textlint/textlint](https://github.com/textlint/textlint/issues/633)
 - PR: [fix(textlint): remove `--parallel` and `--maxConcurrency` flag by azu · Pull Request #1338 · textlint/textlint](https://github.com/textlint/textlint/pull/1338)
 
-### remove `@textlint/linter-formatter` CLI
+### Remove `@textlint/linter-formatter` CLI
 
 `@textlint/linter-formatter` includes CLI, but it is not used by many users.
 So, we remove the CLI from `@textlint/linter-formatter`.
