docs: old vs. new

--- a/website/blog/2024-02-03-textlint-14.md
+++ b/website/blog/2024-02-03-textlint-14.md
@@ -82,7 +82,7 @@ There are replaced by `createLinter` and `loadTextlintrc`, and `loadLinerFormatt
 
 Depreacate four APIs in `textlint` package.
 
-| API | Alternative |
+| Old API | New API |
 | --- | ----------- |
 | `textlint` | use `@textlint/legacy-textlint-core` or `@textlint/kernel` |
 | `TextLintCore` | use `@textlint/legacy-textlint-core` or `@textlint/kernel` |
