fix(docs): update links from textlint.github.io to textlint.org

--- a/website/blog/2023-01-27-textlint-13.md
+++ b/website/blog/2023-01-27-textlint-13.md
@@ -105,7 +105,7 @@ console.log(output);
 
 For more details, please read next document.
 
-- [Use as Node Modules · textlint](https://textlint.github.io/docs/use-as-modules.html)
+- [Use as Node Modules · textlint](https://textlint.org/docs/use-as-modules.html)
 
 If you have any questions, please ask us via GitHub Discussion.
 
@@ -121,10 +121,10 @@ If you have any questions, please ask us via GitHub Discussion.
 - Improve `@textlint/ast-node-types` types
   - Now, All node types are defined!
   - It changes the existing node type and it is a breaking change
-  - If you want to know TxtAST, please read [TxtAST Interface](https://textlint.github.io/docs/txtnode.html)
+  - If you want to know TxtAST, please read [TxtAST Interface](https://textlint.org/docs/txtnode.html)
 - Use New-CLI instead of Old-CLI
   - textlint has introduced New-CLI and New-APIs in [v12.3.0](https://github.com/textlint/textlint/releases/tag/v12.3.0)
-  - New-CLI uses new APIs: `createLinter`/`loadTextlintrc`/`loadLinterFormatter`/`loadFixerFormatter`( If you want to know new APIs, please read [Use as Node Modules](https://textlint.github.io/docs/use-as-modules.html))
+  - New-CLI uses new APIs: `createLinter`/`loadTextlintrc`/`loadLinterFormatter`/`loadFixerFormatter`( If you want to know new APIs, please read [Use as Node Modules](https://textlint.org/docs/use-as-modules.html))
   - It means that textlint support rules/plugins that are written by ESM 🎉
   - Remove Old-CLI
 
