--- a/website/blog/2024-02-03-textlint-14.md
+++ b/website/blog/2024-02-03-textlint-14.md
@@ -76,7 +76,7 @@ Old APIs are `textlint`, `TextLintCore`, `TextLintEngine`, and `TextFixEngine` o
 
 There are replaced by `createLinter` and `loadTextlintrc`, and `loadLinerFormatter` since v13.0.0.
 
-- [textlint v13.0.0 · textlint](https://textlint.github.io/blog/2023/01/27/textlint-13.html)
+- [textlint v13.0.0 · textlint](https://textlint.org/blog/2023/01/27/textlint-13.html)
 
 #### Depretead old APIs
 
@@ -105,7 +105,7 @@ For more details, see [process.emitWarning(warning[, options])](https://nodejs.o
 
 #### Documentaion for New APIs
 
-- [Use as Node Modules · textlint](https://textlint.github.io/docs/use-as-modules.html)
+- [Use as Node Modules · textlint](https://textlint.org/docs/use-as-modules.html)
 
 #### Migration Guide
 
