--- a/website/blog/2018-07-22-textlint-11.md
+++ b/website/blog/2018-07-22-textlint-11.md
@@ -33,7 +33,7 @@ For more details, please see [custom extension example](https://github.com/textl
 
 For developer:
 
-if you want to support `extensions` options, see [Plugin · textlint](https://textlint.github.io/docs/plugin.html).
+if you want to support `extensions` options, see [Plugin · textlint](https://textlint.org/docs/plugin.html).
 
 ### Show message if `textlint --init` is success [#529](https://github.com/textlint/textlint/issues/529)
 
