--- a/website/blog/2024-02-03-textlint-14.md
+++ b/website/blog/2024-02-03-textlint-14.md
@@ -1,7 +1,7 @@
 ---
 title: textlint v14.0.0
 author: azu
-authorURL: http://github.com/azu
+authorURL: "http://github.com/azu"
 ---
 
 We are pleased to announce the release of textlint v14.0.0.
