--- a/website/blog/2018-07-22-textlint-11.md
+++ b/website/blog/2018-07-22-textlint-11.md
@@ -1,7 +1,6 @@
 ---
 title: textlint 11 released
-author: azu
-authorURL: "http://github.com/azu"
+authors: azu
 ---
 
 We just pushed textlint v11.0.0, which is a major release upgrade of textlint.
