--- a/website/blog/2021-05-24-textlint-12.md
+++ b/website/blog/2021-05-24-textlint-12.md
@@ -1,7 +1,6 @@
 ---
 title: textlint v12.0.0
-author: azu
-authorURL: "http://github.com/azu"
+authors: azu
 ---
 
 We just publish textlint v12.0.0, which is a major release upgrade of textlint.
