feat: add release notes for textlint v15.0.0 with breaking changes and new features

--- a/website/blog/2025-06-22-textlint-15.md
+++ b/website/blog/2025-06-22-textlint-15.md
@@ -1,7 +1,6 @@
 ---
-title: textlint v15.0.0 (Draft)
+title: textlint v15.0.0
 authors: azu
-draft: true
 ---
 
 We are pleased to announce the release of textlint v15.0.0.
@@ -13,13 +12,26 @@ textlint v15 is a major release that removes all deprecated APIs that have been 
 This significantly reduces the codebase size and maintenance burden while providing a cleaner, more modern API surface.
 
 **Breaking Changes:**
+- Requires Node.js 20 or later
 - Removed `TextLintEngine` - Use `createLinter()` instead
 - Removed `TextFixEngine` - Use `createLinter()` instead  
 - Removed `TextLintCore` - Use `createLinter()` or `@textlint/kernel` instead
 - Removed `textlint` (singleton instance) - Use `createLinter()` instead
 - Removed `createFormatter` - Use `loadFormatter()` instead
 
+**New Features:**
+- Enhanced MCP integration with structured output, JSON schema validation, and improved error handling
+
 ## Breaking Changes
+
+### Node.js 20+ Required
+
+textlint v15 requires Node.js 20.0.0 or later. This change aligns with Node.js LTS support and enables the use of modern JavaScript features.
+
+**Migration Required:**
+- Update your Node.js version to 20.0.0 or later
+- Update your CI/CD environments to use Node.js 20+
+- Update any Docker images or deployment configurations
 
 ### Removed Deprecated APIs
 
@@ -147,14 +159,38 @@ const formatter = await loadFormatter({
 const output = formatter.format(results);
 ```
 
-## Benefits of the New API
+### Improved Exit Status Handling
 
-1. **Modern ESM Support**: The new APIs support both CommonJS and ES modules
-2. **Better TypeScript Support**: Improved type definitions and inference
-3. **Cleaner Architecture**: Separation of concerns between configuration loading and linting
-4. **More Flexible**: Easier to customize and extend for different use cases
-5. **Better Testing**: Each component can be tested independently
-6. **Reduced Bundle Size**: Significantly smaller codebase (-4,147 lines)
+textlint v15 improves exit status handling to align with ESLint's behavior, helping scripts distinguish between different types of errors.
+
+**Key Changes:**
+- File search errors now return exit status 2 (previously 1)
+- Lint errors continue to return exit status 1
+- Success cases return exit status 0
+
+```bash
+# v15+ behavior (now matches ESLint)
+textlint nonexistent-file.md     # Exit Status: 2 (file search error)
+textlint file-with-errors.md     # Exit Status: 1 (lint errors)
+textlint clean-file.md           # Exit Status: 0 (success)
+```
+
+This enables better CI/CD error handling and aligns with ESLint's behavior. For comprehensive documentation, see the [Exit Status FAQ](https://textlint.org/docs/faq/exit-status.html).
+
+### Fixed Ignore Pattern Handling for Absolute Paths
+
+textlint v15 fixes a bug where absolute file paths did not respect `.textlintignore` patterns.
+
+**What was fixed:**
+```bash
+# Before v15 (Bug)
+textlint /absolute/path/to/ignored-file.md  # ❌ Would lint even if ignored
+
+# v15+ (Fixed)
+textlint /absolute/path/to/ignored-file.md  # ✅ Properly respects .textlintignore
+```
+
+This fix is important for CI/CD systems and IDE integrations that use absolute paths. See [GitHub Issue #1412](https://github.com/textlint/textlint/issues/1412) for details.
 
 ## Migration Guide
 
@@ -239,6 +275,19 @@ const linter = createLinter({
 });
 ```
 
+## New Features
+
+### Enhanced Model Context Protocol (MCP) Support
+
+textlint v15 introduces significant improvements to [Model Context Protocol (MCP)](https://spec.modelcontextprotocol.io/) support, making it easier to integrate textlint with AI assistants and language models.
+
+**Key Improvements:**
+- **Structured Output**: Better formatted results for AI consumption
+- **JSON Schema Support**: Validation using output schemas
+- **Enhanced Error Handling**: More detailed error reporting for MCP clients
+- **Improved Documentation**: Better MCP integration examples
+
+For more details, see the [MCP documentation](https://textlint.org/docs/mcp.html).
 
 **Improvements:**
 - **Exit Status Improvement**: File search errors now return exit status 2 (aligned with ESLint)
@@ -288,6 +337,6 @@ This fix is important for CI/CD systems and IDE integrations that use absolute p
 
 textlint v15 represents a significant step forward in modernizing the API surface while maintaining the powerful linting capabilities that users expect. While the migration requires some code changes, the new API provides better TypeScript support, modern ESM compatibility, and a cleaner architecture that will serve as a solid foundation for future development.
 
-We encourage all users to migrate to the new APIs as soon as possible. The deprecated APIs have been removed, so upgrading to v15 will require code changes. However, the migration is straightforward, and the benefits of the new API make it worthwhile.
+We encourage all users to migrate to the new APIs as soon as possible. The deprecated APIs have been removed, so upgrading to v15 will require code changes.
 
 Thank you for your continued support of textlint!
