fix: revert version to 15.0.0 in package.json and update blog for Webpack compatibility changes

--- a/website/blog/2025-06-22-textlint-15.md
+++ b/website/blog/2025-06-22-textlint-15.md
@@ -28,6 +28,17 @@ This significantly reduces the codebase size and maintenance burden while provid
 
 textlint v15 requires Node.js 20.0.0 or later. This change aligns with Node.js LTS support and enables the use of modern JavaScript features.
 
+### Removed `module` Field for Webpack Compatibility
+
+In textlint v15, the `module` field has been removed from all @textlint packages that had both `type: "commonjs"` and a `module` field, to improve compatibility with Webpack. Previously, having both fields caused resolution issues in Webpack, requiring users to add workarounds.
+
+**Details:**
+- Removed the `module` field from 15 @textlint packages
+- No longer necessary to set custom `mainFields` in Webpack
+- [Issue #1587](https://github.com/textlint/textlint/issues/1587) / [PR #1588](https://github.com/textlint/textlint/pull/1588)
+
+With this change, Webpack users can use textlint packages out-of-the-box, and module resolution issues are resolved without extra configuration.
+
 **Migration Required:**
 - Update your Node.js version to 20.0.0 or later
 - Update your CI/CD environments to use Node.js 20+
