chore: fix typos

--- a/website/blog/2024-02-03-textlint-14.md
+++ b/website/blog/2024-02-03-textlint-14.md
@@ -102,7 +102,7 @@ NODE_OPTIONS=--throw-deprecation node your-script.js
 
 For more details, see [process.emitWarning(warning[, options])](https://nodejs.org/api/process.html#processemitwarningwarning-options).
 
-#### Documentaion for New APIs
+#### Documentation for New APIs
 
 - [Use as Node Modules · textlint](https://textlint.org/docs/use-as-modules.html)
 
