--- a/website/blog/2018-07-22-textlint-11.md
+++ b/website/blog/2018-07-22-textlint-11.md
@@ -98,7 +98,7 @@ export default function(context, options) {
 
 **After**:
  
-`very-nice-rule.js` rule get `{}` (emptry object) as `options`.
+`very-nice-rule.js` rule get `{}` (empty object) as `options`.
  
 ```js
 export default function(context, options) {
@@ -112,7 +112,7 @@ export default function(context, options) {
 
 Insteadof it, support availableExtensions() instance method in plugin [#534](https://github.com/textlint/textlint/issues/534)
 
-You should change the implementaion of plugin.
+You should change the implementation of plugin.
 textlint still support `static availableExtensions` for backward-compatibility.
 
 ```diff
@@ -189,7 +189,7 @@ export default function(context, options) {
 
 **After**:
  
-`very-nice-rule.js` rule get `{}` (emptry object) as `options`.
+`very-nice-rule.js` rule get `{}` (empty object) as `options`.
  
 ```js
 export default function(context, options) {
